--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ textarea {
   padding: 0.5rem;
   font-family: Georgia, "Times New Roman", Times, serif;
   border-radius: 8px;
-  background-color: #dcdcdc;
+  background-color: #ffffff;
 }
 body {
   font-family: sans-serif;
