Update style.css to show links in orange #ffa31a

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   color: #ffffff;
 }
 a:link {
-  color: green;
+  color: #ffa31a;
   background-color: transparent;
   text-decoration: underline;
 }
