--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ a:active {
 }
 
 #navbar a {
-  float: right;
+  float: left;
   display: block;
   color: #000000;
   text-align: center;
@@ -57,10 +57,10 @@ a:active {
 .submission-form {
   max-width: 500px;
   margin: 2rem auto;
-  border: 4px solid #ffa31a;
+  border: 4px solid #ff8100;
   padding: 2rem;
   border-radius: 10px;
-  background-color: #ffa31a;
+  background-color: #ff8100;
 }
 label {
   display: block;
@@ -74,6 +74,7 @@ label {
   cursor: pointer;
   transition: 0.4s ease;
   border-radius: 8px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .button:hover {
   background: black;
@@ -121,19 +122,12 @@ body {
   width: 100%;
   height: auto;
 }
-#demo {
-  text-align: center;
-  font-size: 30px;
-}
-.votetime {
-  text-align: center;
-  font-size: 50px;
-}
 .hometable {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
   padding: 5px;
+  border: 3px solid #ff8100;
 }
 .hometable td,
 .hometable th {
@@ -149,4 +143,16 @@ body {
 table.center {
   margin-left: auto;
   margin-right: auto;
+}
+.frame {
+  width: "600px";
+  height: "752px";
+  float: "left;";
+}
+.votetime {
+  text-align: center;
+  font-size: 50px;
+}
+.placeholder {
+  font-family: Arial, Helvetica, sans-serif;
 }
