--- a/style.css
+++ b/style.css
@@ -122,15 +122,15 @@ body {
   width: 100%;
   height: auto;
 }
-.hometable {
+.hoftable {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
   padding: 5px;
   border: 3px solid #ff8100;
 }
-.hometable td,
-.hometable th {
+.hoftable td,
+.hoftable th {
   padding: 40px;
   text-align: center;
 }
@@ -155,4 +155,15 @@ table.center {
 }
 .placeholder {
   font-family: Arial, Helvetica, sans-serif;
+}
+.hometable {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px;
+}
+.hometable td,
+.hometable th {
+  padding: 40px;
+  text-align: center;
 }
